assets/css/main.scss
---
---

@import "mixins";

$background-color: {{site.background_color}};
// $accent-color: #165E33; 
// $events-color:#AA504A;
$accent-color: {{site.accent_color}};
$events-color:{{site.events_overlay_color}};
// $accent-color: #AA401B;
// $events-color:#225E50;
$accent-text-color:white;

$footer-text: {{site.footer_text_color}};

@font-face {
    font-family: Biko;
    src: url('../fonts/Biko_Regular.otf');
}

html { height: 100%; width: 100% }

body {
    background-color: $background-color;
    padding: 0;
    font-size: 1.6em;
    height: 100%;
    width: 100%;
    font-family: "Lato", Helvetica, sans-serif;

}

h1,h2,h3,h4,h5 {
    font-family: "Biko", Helvetica, sans-serif;

}

.biko {
    font-family: "Biko", Helvetica, sans-serif;
}

section.social-media {
    min-height: 20%;

}

.companies {
  text-align: center;
  img {
    margin-top: 20px;
  }
}

.events {
    text-align: center;
    a {
        text-decoration: none;
        opacity: 0.5;   
        color: white;
        @include transition(0.5s ease);
        font-size: 30px; 
        &:hover {
            opacity: 0.9;
            
        }

        &:active, &:focus {
            
            opacity: 0.5;
        }
    
    }

    .image {
        width: 100%;
        height: 200px;
        @include box-shadow(1px 5px 8px 1px rgba(0,0,0,.19));
        padding-top: 80px;
        padding-left: 5px;
        padding-right: 5px;
        margin-top: 20px;
        margin-bottom: 20px;
        @include transition(0.5s ease);
 
        &:hover {
            margin-top: 22px;
            margin-bottom: 18px;
            @include box-shadow(1px 2px 6px 1px rgba(0,0,0,.19));
            
        }

        &:active, &:focus {
            
            @include box-shadow(1px 5px 8px 1px rgba(0,0,0,.19));
        }
 
    }

    .event_container {
      display: flex;
      justify-content: center;
    }
 }

.team {
  text-align: center;
  i {
    margin: 5px;
    color: $accent-color;
  }
  .row {
    margin: 10px;
  }

  img {
    @include box-shadow( 0px 0px 2px 2px rgba(0, 0, 0, 0.2));
  }

    a {
        
         h3,h5 {
              opacity: 1.0;
              @include transition(0.5s ease);
          }
        color: inherit;
        text-decoration: none;
        @include transition(0.5s ease);


                
        &:hover {
            opacity: 0.6;
            h3, h5 {
              opacity: 0.6;
            }
            
        }

        &:active, &:focus {
            color: inherit;
        }
        
    }
}


@media (min-width:1200px){
  .auto-clear .col-lg-1:nth-child(12n+1){clear:left;}
  .auto-clear .col-lg-2:nth-child(6n+1){clear:left;}
  .auto-clear .col-lg-3:nth-child(4n+1){clear:left;}
  .auto-clear .col-lg-4:nth-child(3n+1){clear:left;}
  .auto-clear .col-lg-6:nth-child(odd){clear:left;}
}
@media (min-width:992px){
  .auto-clear .col-md-1:nth-child(12n+1){clear:left;}
  .auto-clear .col-md-2:nth-child(6n+1){clear:left;}
  .auto-clear .col-md-3:nth-child(4n+1){clear:left;}
  .auto-clear .col-md-4:nth-child(3n+1){clear:left;}
  .auto-clear .col-md-6:nth-child(odd){clear:left;}
}
@media (min-width:768px){
  .auto-clear .col-sm-1:nth-child(12n+1){clear:left;}
  .auto-clear .col-sm-2:nth-child(6n+1){clear:left;}
  .auto-clear .col-sm-3:nth-child(4n+1){clear:left;}
  .auto-clear .col-sm-4:nth-child(3n+1){clear:left;}
  .auto-clear .col-sm-6:nth-child(odd){clear:left;}
}
@media (max-width:767px){
  .auto-clear .col-xs-1:nth-child(12n+1){clear:left;}
  .auto-clear .col-xs-2:nth-child(6n+1){clear:left;}
  .auto-clear .col-xs-3:nth-child(4n+1){clear:left;}
  .auto-clear .col-xs-4:nth-child(3n+1){clear:left;}
  .auto-clear .col-xs-6:nth-child(odd){clear:left;}
}

.accent-section {
    background-color: $accent-color;
    color: $accent-text-color;
    padding-bottom: 3em;
    text-align: center;
    @include box-shadow( 0px 0px 2px 2px rgba(0, 0, 0, 0.2));
    z-index: 99;
    position: relative;

    .social-icons {
        a {
            color: $accent-text-color;
            font-size: 2em;

            @include transition(all .1s linear);

            &:hover {
                color: rgba($accent-text-color, 0.7);
            }

        }
    }
    h1,
    h2 {
      text-align: center;
    }

    .panel {
      color: black;
      text-align: left;
    }

    .apply-btn {
      display: inline-block;
      font-size: 30px;
    }

    .btn {
      background-color: {{site.background_color}};
      color: black;
      font-family: Biko;
    }
}

.social-icons  {
    a{
        text-decoration: none;
        padding: 10px;
        font-size: 100%;
    }

   
}

.btn {
    @include box-shadow(0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19));
    // text-transform: uppercase;
    @include border-radius(0);
    position: relative;
    top: 0;
    @include transition(all .1s linear);

    &:hover {
        top: 1px;
        @include box-shadow(0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1.5px 5px 0 rgba(0, 0, 0, 0.19));


    }

    i {
        color: inherit;
        margin-right: 0.5em;
    }
    a {
        color: inherit;
        text-decoration: none;
    }

    &.btn-fb {
        color: #333;
        background-color: #fff;
        border-color: #ccc;
    }

    &.btn-accent {
        font-size: 1.2em;
        color: $accent-text-color;
        background-color: $accent-color;
        border-color: $accent-color;

        &:active, &:focus{
            background-color: $accent-color;
            margin-color: $accent-color;
        }

        &:hover{
            background-color: lighten($accent-color, 5%);
            border-color: lighten($accent-color, 5%);
        }

        
    }


}




header {
    padding-top: 7em;
    padding-bottom: 5em;
    min-height: 80%;

    img.logo {
        width: 100%;
        
    }

    img.logo, .lead,  .btn {
        margin-bottom: 2em;

    }

     div.panel {
        @include box-shadow(1px 5px 8px 1px rgba(0,0,0,.19));
        @include border-radius(0);
        .panel-body {
            border: 1px $accent-color;
            padding: 10px;
        }

        p{
            font-size: 14px;
        }
    }
}



footer {
    padding-top: 2em;
    width: 100%;
  
    p {
        color: $footer-text;
        opacity: 0.5;
        font-size: 70%; 

    }


    

    .row {
        margin-bottom: 10px;
    }

    a {
        opacity: 0.5;   
        color: $footer-text;
        @include transition(0.5s ease);
        font-size: 70%; 

        &:hover {
            opacity: 0.9;
            color: $footer-text;
        }

        &:active, &:focus {
            color: $footer-text;
            opacity: 0.5;
        }
        
    }

    .text-imp {
        color: darken($footer-text,100%);
        text-transform: uppercase;
        text-decoration: none;
        opacity: 0.9;
        font-size: 100%;   
         &:active, &:focus {
            color: darken($footer-text,100%);
            opacity: 0.9;
        }

    }

    
}



.white-text {
    color: $accent-text-color;
}

section {
    padding-bottom: 20px;
    padding-top: 2em;
}

section.team {
  .group-pic {
    border-radius: 8px;
    max-width: 50%;
    height: auto;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    @media (max-width:767px){
      max-width: 80%;
    }
  }
}


section.apply{
    background: linear-gradient( rgba($events-color, 0.75), rgba($events-color, 0.75) ), url(../../{{site.events_bg_img}}) no-repeat center center/cover;
    color: $accent-text-color;
    padding-bottom: 3em;
    text-align: center;
    h1,
    h2 {
      text-align: center;
    }
    .panel {
      color: black;
      text-align: left;
    }

    .main-title {
        padding-bottom: 30px;
    }

    
    

}

.buttons {

  &.title {
    padding-top: 10vh;
    padding-bottom: 3vh;
  }
  

  .svg-wrapper {
    margin-top: 0;
    position: relative;
    display: inline-block;
    margin-left: 10px;
    margin-right: 10px;
    padding-bottom: 3vh;
    text-transform: uppercase;
    border-radius: 3px;

    a {
      color: $accent-color;
      text-decoration: none;

      padding: 5px 10px;
    }

    svg {
      background-color: transparent;
      @include box-shadow(0px 2px 8px 3px rgba(0, 0, 0, 0.2));

      &:hover {
        @include box-shadow(0px 2px 8px 0px rgba(0, 0, 0, 0.2));
      }

    }
    .shape {
      stroke-width: 8px;
      fill: white;
      stroke: $accent-color;
      stroke-dasharray: 150 400;
      stroke-dashoffset: -190;
      @include transition(1s all ease);

    }

    .text {
      margin-top: -40px;
      color: $accent-color;
      font-size: 1.5em;
      text-align: center;
    }

    &:hover .shape {
      stroke: $accent-color,10%;
      stroke-dasharray: 50 0;
      stroke-dashoffset: 0;
    }

  }

  
}



@media (max-width: 768px) {
    .text-center-xs, {
        text-align: center;
    } 
    header {
        padding-top: 2em;
    }
}

